--- a/emmons_frontend/web/index.html
+++ b/emmons_frontend/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Emmons Frontend</title>
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
