Add base href to index.html for proper routing

--- a/emmons_frontend/web/index.html
+++ b/emmons_frontend/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Emmons Frontend</title>
+  <base href="/">
   <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
