--- a/emmons_frontend/web/index.html
+++ b/emmons_frontend/web/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Emmons Frontend</title>
   <base href="/">
+  <link rel="icon" href="favicon.ico">
   <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
