New donate widget

--- a/emmons_frontend/web/index.html
+++ b/emmons_frontend/web/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <head>
   <meta charset="UTF-8">
   <title>Emmons Frontend</title>
   <base href="/">
   <link rel="icon" href="favicon.ico">
   <script src="https://js.stripe.com/v3/"></script>
+</head>
+  
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
