--- a/emmons_frontend/web/index.html
+++ b/emmons_frontend/web/index.html
@@ -5,7 +5,7 @@
   <title>Emmons Frontend</title>
   <base href="/">
   <link rel="icon" href="favicon.ico">
-  <meta name="flutter-web-renderer" content="html" />
+  <meta name="flutter-web-renderer" content="canvaskit" />
   <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
