--- a/universal_campaign_frontend/web/index.html
+++ b/universal_campaign_frontend/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>universal_campaign_frontend</title>
+  <link id="favicon" rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
