--- a/universal_campaign_frontend/web/index.html
+++ b/universal_campaign_frontend/web/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>universal_campaign_frontend</title>
   <link id="favicon" rel="icon" type="image/png" />
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
   <script src="main.dart.js" type="application/javascript"></script>
