--- a/universal_campaign_frontend/web/index.html
+++ b/universal_campaign_frontend/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>universal_campaign_frontend</title>
-  <link id="favicon" rel="icon" type="image/png" href="assets/favicons/Cox_Favicon.png" />
+  <link id="favicon" rel="icon" type="image/png" />
   
   <script src="https://js.stripe.com/v3/"></script>
 </head>
