Stripe (might break)

--- a/universal_campaign_frontend/web/index.html
+++ b/universal_campaign_frontend/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>universal_campaign_frontend</title>
+  <link rel="manifest" href="manifest.json">
   <link id="favicon" rel="icon" type="image/png" />
   
   <script src="https://js.stripe.com/v3/"></script>
